--- a/4 семестр (Оптика)/4.3.1/431.tex
+++ b/4 семестр (Оптика)/4.3.1/431.tex
@@ -357,13 +357,98 @@ $z_m,\ \text{мм}$ & 0,125 & 0,144 & 0,144 & 0,152 & 0,157 & 0,161 \\ \hline
     \caption{График зависимости $2z_m = f(m)$}
 \end{figure}
 
+\subsection*{Дифракция Фраунгофера на щели}
+
+Построим график, откладывая по горизонтали номер минимума $m$, а по
+вертикали --- его координату $X_m$. По углу наклона определим среднее
+расстояние $\Delta X$ между соседними минимумами; 
+
+\begin{table}[H]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|}
+    \hline 
+$m$  & -5   & -4    & -3    & -2    & -1    \\ \hline
+$X_m,\ \text{мм}$ & -0,9 & -0,72 & -0,54 & -0,36 & -0,16 \\ \hline
+$m$  & 5    & 4     & 3     & 2     & 1     \\ \hline
+$X_m,\ \text{мм}$ & 0,92 & 0,74  & 0,54  & 0,36  & 0,18  \\ \hline
+\end{tabular}
+\caption{Номер минимума $m$ и его координата $X_m$}
+\end{table}
 
 
+\begin{figure}[H]
+    \includegraphics[width=\linewidth]{10} 
+    \caption{Зависимость номера минимума $m$ от его координаты $X_m$}
+\end{figure}
 
+Рассчитаем ширину щели по формуле (8)
+\[
+    D = (0,351\pm0,003)\ \text{мм}
+\]
+
+Что совпадает со значением, полученным с помощью микрометрического
+винта:
+\[
+    D_0 = (0,35 \pm 0,02)
+\]
+
+
+\subsection*{Дифракция Фраунгофера на двух щелях}
+Определим расстояние $\delta x$ между минимумами по результатам
+измерений 
+\[
+    \delta x = (0,058 \pm 0,004)\ \text{мм}
+\]
+
+Рассчитаем $d$ по формуле (10):
+\[
+    d = (1,09 \pm 0,07)\ \text{мм} 
+\]
+
+Измеренное значение $d$:
+\[
+    d_\text{э} = (0,97 \pm 0,04)\ \text{мм}
+\]
+
+Рассчитаем число полос по формуле (11):
+\[
+    n = (7,8 \pm 0,3) 
+\]
+
+Число полос, наблюдаемое в эксперименте
+\[
+    n_0 = 10
+\]
+
+Рассчитаем ширину $b$ щели $S$ по формуле (12):
+\[
+    b = (63\pm 4)\ \text{мкм}
+\]
+
+Измеренное значение  $b_0$:
+\[
+    b_0 = (81\pm 5)\ \text{мкм}
+\]
+
+\subsection*{Влияние дифракции на разрешающую способность оптического
+инструмента}
+Измеренная ширина щели $S_2$:
+\[
+    D_0 = (63\pm 2)\ \text{мкм}
+\]
+
+Ширина щели $S_2$, вычисленная по формуле (15):
+\[
+    D = (65 \pm 4)\ \text{мкм}
+\]
 
 
 
 \section{Обсуждение результатов и выводы}
+В работе были исследованы явления дифракции Френеля и Фраунгофера на
+щели, изучено влияние дифракции на разрешающую способность оптических
+инструментов.
+
 
 
 
