--- a/4 семестр (Оптика)/4.2.2/422.tex
+++ b/4 семестр (Оптика)/4.2.2/422.tex
@@ -433,14 +433,14 @@ $n_0$ по формуле (9):
 условиях опыта по формуле (4):
 
 \[
-    n^{CO_2} = 1,00053 \pm 0,00008
+    n^{CO_2} = 1,00044 \pm 0,00008
 \]
 
 Пересчитаем показатель преломления углекислого газа $n_{CO_2}^0$ по
 формуле (9):
 
 \[
-    n_0^{CO_2} = 1,00058 \pm 0,00009
+    n_0^{CO_2} = 1,00047 \pm 0,00009
 \]
 
 Оценим интервал $\Delta n$, доступный для измерений, исходя из
@@ -449,8 +449,8 @@ $n_0$ по формуле (9):
 работы. 
 \begin{equation*}
     \begin{gathered}
-        \Delta n_{min} = 6\ \text{мкм} \\
-        \Delta n_{max} = 25\ \text{см}
+        \Delta n_{min} \approx 1\cdot 10^{-6} \\
+        \Delta n_{max} \approx 3 \cdot 10^{-3}
     \end{gathered}
 \end{equation*}
 
@@ -463,7 +463,7 @@ $n_0$ по формуле (9):
 значением, однако значение показателя преломления углекислого газа
 несколько отличается от теоретического. Это связано с трудностью
 определения нулевой полосы после заполнения камеры углекислым газом.
-Смещение нулевой полосы составляет $\approx 40$ полос и выходит за
+Смещение нулевой полосы составляет $\approx 23$ полосы и выходит за
 область видимости зрительной трубы. 
 
 \renewcommand{\arraystretch}{1.4}
@@ -474,7 +474,7 @@ $n_0$ по формуле (9):
     \makecell[c]{Величина} & \makecell{Экспериментальное \\ значение} &
     \makecell{Теоретическое \\ значение} \\ \hline 
     $n_0$ & $1,00029\pm0,00002$ & $1,000292$ \\ \hline 
-    $n_0^{CO_2}$ & $1,00058\pm0,00009$ & $1,000450$ \\ \hline 
+    $n_0^{CO_2}$ & $1,00047\pm0,00009$ & $1,000450$ \\ \hline 
 \end{tabular}
 \captionsetup{justification=centering}
 \caption{Сравнение теоретических и экспериментальных значений
