--- a/4 семестр (Оптика)/4.3.1/431.tex
+++ b/4 семестр (Оптика)/4.3.1/431.tex
@@ -334,27 +334,26 @@ $S_2$. Когда полуширина дифракционного изобра
 
 
 Снимем зависимость координаты микроскопа от числа $m$ наблюдаемых
-темных полос. Вычислим суммарную ширину $m$ зон Френеля $z_m$ по
+темных полос. Вычислим суммарную ширину $m$ зон Френеля $z_n$ по
 формуле (1).
 
 
 \begin{table}[H]
 \centering
 \begin{tabular}{|c|c|c|c|c|c|c|}
-   \hline  
-$m$  & 1     & 2     & 3     & 4     & 5     & 6     \\ \hline
+\hline
+$n$  & 2     & 3     & 4     & 5     & 6     & 7     \\ \hline
 $a,\ \text{см}$  & 2,7   & 1,8   & 1,2   & 1     & 0,85  & 0,75  \\ \hline
-$z_m,\ \text{мм}$ & 0,125 & 0,144 & 0,144 & 0,152 & 0,157 & 0,161 \\ \hline
+$z_n,\ \text{мм}$ & 0,177 & 0,177 & 0,167 & 0,170 & 0,172 & 0,174 \\ \hline
 \end{tabular}
-\caption{Зависимость координаты микроскопа $z_m$ от числа $m$
-наблюдаемых полос}
+\caption{Зависимость координаты микроскопа $z_n$ от числа зон Френеля $n$}
 \end{table}
 
-Построим график $2z_m = f(m)$
+Построим график $2z_n = f(n)$
 
 \begin{figure}[H]
     \includegraphics[width=0.9\linewidth]{9} 
-    \caption{График зависимости $2z_m = f(m)$}
+    \caption{График зависимости $2z_n = f(n)$}
 \end{figure}
 
 \subsection*{Дифракция Фраунгофера на щели}
