--- a/1 семестр (Механика)/1.1.1 (Определение систематических и случайных погрешностей при измерении удельного сопротивления нихромовой проволки)/1.1.1.tex
+++ b/1 семестр (Механика)/1.1.1 (Определение систематических и случайных погрешностей при измерении удельного сопротивления нихромовой проволки)/1.1.1.tex
@@ -11,7 +11,7 @@
 \usepackage{wrapfig}
 \usepackage{array}
 \usepackage[american,siunitx,smartlabels]{circuitikz} 
-
+%\usepackage{fouriernc}
 
 \usepackage{wasysym}
 
