--- a/3 семестр (Электричество и магнетизм)/cq/cq.tex
+++ b/3 семестр (Электричество и магнетизм)/cq/cq.tex
@@ -1,10 +1,10 @@
 \include{preamble/preamble1} 
 \usepackage{mathrsfs}
 \usepackage[e]{esvect}
-\usepackage{mathabx}
 \newcommand{\dive}{\mathrm{div}}
 \newcommand{\rot}{\mathrm{rot}}
 \begin{document}
+\renewcommand{\vv}{\vec}
 \include{titlepage/titlepage}
 \section{Аннотация}
 В работе будут рассмотрены принципы работы
