--- a/3 семестр (Электричество и магнетизм)/cq/preamble/preamble1.tex
+++ b/3 семестр (Электричество и магнетизм)/cq/preamble/preamble1.tex
@@ -194,4 +194,6 @@
 \usepackage{soul}
 \usepackage{soulutf8}
 
-% \usepackage{mathabx}
+%\usepackage{mathabx}
+\usepackage{fouriernc}
+\usepackage{fourier}
