--- a/Кафедра квантовой радиофизики/Aberration/titlepage/titlepage.tex
+++ b/Кафедра квантовой радиофизики/Aberration/titlepage/titlepage.tex
@@ -26,8 +26,10 @@
 
     \begin{flushright}
         \noindent
-        \textit{Работу выполнил:}\\  
-        \textit{Баринов Леонид \\(группа Б02-827)}
+        \textit{Работу выполнили:}\\  
+        \textit{Александра Деева}%\\(группа Б02-823)}
+
+        \textit{Баринов Леонид}%\\(группа Б02-827)}
     \end{flushright}
     \vfill
     Долгопрудный \\2020
