--- a/5 семестр (Квантовая физика)/2.1/2.1.tex
+++ b/5 семестр (Квантовая физика)/2.1/2.1.tex
@@ -292,7 +292,7 @@ I_\text{к}(V_\text{а})$ лампы.
 энергию возбуждения первого уровня атома гелия. Одно маленькое деление
 соответствует $1\ \text{В}$. Усредняя получим:
 \[
-    E_1^\text{дин} = (25,0 \pm 0,8)\ \text{эВ}
+    E_1^\text{дин} = (15,6 \pm 0,5)\ \text{эВ}
 \]
 
 Получим вольт-амперную характеристику $I_\text{к} = f (V_\text{а})$ в
@@ -353,7 +353,7 @@ I_\text{к}(V_\text{а})$ лампы.
 По графику на \fig{fig:11} определим энергию возбуждения первого
 уровня атома гелия
 \[
-    E_1^\text{стат} = (30,7 \pm 0,9)\ \text{эВ}
+    E_1^\text{стат} = (19,2 \pm 0,6)\ \text{эВ}
 \]
 
 
@@ -367,18 +367,119 @@ I_\text{к}(V_\text{а})$ лампы.
 динамическом и статическом режимах методом электронного возбуждения
 \begin{equation*}
     \begin{aligned}
-        E_1^\text{дин} &= (25,0 \pm 0,8)\ \text{эВ}\\
-        E_1^\text{стат} &= (30,7 \pm 0,9)\ \text{эВ}
+        E_1^\text{дин} &= (15,6 \pm 0,5)\ \text{эВ}\\
+        E_1^\text{стат} &= (19,2 \pm 0,6)\ \text{эВ}
     \end{aligned}
 \end{equation*}
 
-Значение, полученное в динамическом режиме, в пределах погрешности
-совпадает с табличным значением $E_1 = 24,6\
-\text{эВ}$. (\url{https://physics.nist.gov/cgi-bin/ASD/ie.pl})
+Значение, полученное в статическом режиме, в пределах погрешности
+совпадает с табличным значением $E_1 = 19,8\
+\text{эВ}$. (\url{https://physics.nist.gov/cgi-bin/ASD/energy1.pl?encodedlist=XXT2&de=0&spectrum=He+I&submit=Retrieve+Data&units=1&format=0&output=0&page_size=15&multiplet_ordered=0&average_out=1&conf_out=on&term_out=on&level_out=on&unc_out=1&j_out=on&lande_out=on&perc_out=on&biblio=on&temp=})
+
+Расхождения значений в статическом и динамическом режиме могут быть
+связаны с нелинейными эффектами при прямом и обратном ходе и с
+упрощенным описанием процесса столкновения электронов и атомов.
 
 
+\setcounter{section}{0}
+\renewcommand{\thesection}{\Asbuk{section}}
 
+\section{Приложение}
+Данные для построения графика на \fig{fig:11}
+\begin{longtable}{|c|c|c|c|c|c|}
+	\hline
+        \multicolumn{2}{|c|}{$V_2 = 4\ \text{В}$} &
+        \multicolumn{2}{c|}{$V_2 = 6\ \text{В}$} &
+        \multicolumn{2}{c|}{$V_2 = 8\ \text{В}$} \\ \hline
+        $V_\text{a},\ \text{В}$           & $I_\text{к},\ \text{мкА}$          & $V_\text{a},\ \text{В}$           & $I_\text{к},\ \text{мкА}$         &
+$V_\text{a},\ \text{В}$           & $I_\text{к},\ \text{мкА}$         \\ \hline
+	\endfirsthead
+	\hline
+        \multicolumn{2}{|c|}{$V_2 = 4\ \text{В}$} &
+        \multicolumn{2}{c|}{$V_2 = 6\ \text{В}$} &
+        \multicolumn{2}{c|}{$V_2 = 8\ \text{В}$} \\ \hline
+        $V_\text{a},\ \text{В}$           & $I_\text{к},\ \text{мкА}$          & $V_\text{a},\ \text{В}$           & $I_\text{к},\ \text{мкА}$         &
+$V_\text{a},\ \text{В}$           & $I_\text{к},\ \text{мкА}$         \\ \hline
+	\endhead
+	\hline
+	\endfoot
 
+	\endlastfoot
+
+0,00           & 0,00            & 0                  & 0                  & 0                  & 0                  \\ \hline
+3,18           & 5,00            & 6,72               & 10                 & 9,27               & 12                 \\ \hline
+4,86           & 10,00           & 10,92              & 20                 & 13,32              & 21                 \\ \hline
+6,93           & 15,00           & 13,25              & 25                 & 17,47              & 30                 \\ \hline
+9,48           & 20,00           & 14,53              & 27                 & 18,66              & 32                 \\ \hline
+12,18          & 25,00           & 16,13              & 30                 & 19,88              & 33                 \\ \hline
+14,97          & 30,00           & 17,62              & 33                 & 21,36              & 31                 \\ \hline
+15,45          & 31,00           & 18,35              & 34                 & 23,15              & 27                 \\ \hline
+16,14          & 32,00           & 20,23              & 34                 & 24,37              & 19                 \\ \hline
+16,71          & 33,00           & 20,94              & 33                 & 24,99              & 13                 \\ \hline
+17,39          & 34,00           & 21,67              & 31                 & 25,97              & 8                  \\ \hline
+17,97          & 35,00           & 22,27              & 29                 & 27,08              & 7                  \\ \hline
+19,85          & 34,00           & 22,82              & 27                 & 28,05              & 8                  \\ \hline
+20,27          & 33,00           & 23,5               & 25                 & 31,34              & 19                 \\ \hline
+20,94          & 32,00           & 23,78              & 23                 & 34,67              & 30                 \\ \hline
+21,79          & 31,00           & 24,03              & 20                 & 36,13              & 35                 \\ \hline
+22,31          & 30,00           & 24,34              & 18                 & 37,18              & 38                 \\ \hline
+22,95          & 28,00           & 25                 & 15                 & 38,59              & 38                 \\ \hline
+23,10          & 27,00           & 25,91              & 14                 & 40,59              & 37                 \\ \hline
+23,32          & 26,00           & 26,73              & 15                 & 43,4               & 33                 \\ \hline
+23,45          & 25,00           & 27,48              & 17                 & 46,14              & 29                 \\ \hline
+23,67          & 24,00           & 28,82              & 22                 & 49,22              & 27                 \\ \hline
+23,94          & 23,00           & 31,26              & 30                 & 51,73              & 28                 \\ \hline
+25,11          & 23,00           & 33,05              & 36                 & 56,27              & 35                 \\ \hline
+25,45          & 24,00           & 34,35              & 40                 & 59,6               & 40                 \\ \hline
+26,08          & 25,00           & 36,73              & 47                 & 61,99              & 43                 \\ \hline
+26,72          & 27,00           & 37,28              & 48                 & 66,33              & 44                 \\ \hline
+27,96          & 30,00           & 40,6               & 46                 & 70,44              & 43                 \\ \hline
+29,54          & 35,00           & 41,78              & 44                 & 74,97              & 44                 \\ \hline
+31,30          & 40,00           & 44,06              & 40                 & 76,78              & 45                 \\ \hline
+34,65          & 50,00           & 47,67              & 38                 & 79                 & 47                 \\ \hline
+36,79          & 55,00           & 49,16              & 40                 & 80,61              & 48                 \\ \hline
+40,28          & 54,00           & 51,44              & 43                 & \multicolumn{2}{c|}{\multirow{35}{*}{}} \\ \cline{1-4}
+36,24          & 54,00           & 55,28              & 50                 & \multicolumn{2}{c|}{}                   \\ \cline{1-4}
+40,63          & 53,00           & 60,86              & 60                 & \multicolumn{2}{c|}{}                   \\ \cline{1-4}
+42,26          & 50,00           & 71,91              & 65                 & \multicolumn{2}{c|}{}                   \\ \cline{1-4}
+44,69          & 49,00           & 75,16              & 68                 & \multicolumn{2}{c|}{}                   \\ \cline{1-4}
+45,50          & 50,00           & 77,07              & 70                 & \multicolumn{2}{c|}{}                   \\ \cline{1-4}
+49,67          & 55,00           & 77,89              & 71                 & \multicolumn{2}{c|}{}                   \\ \cline{1-4}
+52,39          & 60,00           & 76,25              & 69                 & \multicolumn{2}{c|}{}                   \\ \cline{1-4}
+53,76          & 65,00           & 79,32              & 73                 & \multicolumn{2}{c|}{}                   \\ \cline{1-4}
+55,21          & 68,00           & 61,71              & 62                 & \multicolumn{2}{c|}{}                   \\ \cline{1-4}
+56,30          & 71,00           & 63,2               & 63                 & \multicolumn{2}{c|}{}                   \\ \cline{1-4}
+57,00          & 73,00           & 65,44              & 64                 & \multicolumn{2}{c|}{}                   \\ \cline{1-4}
+57,88          & 75,00           & 67,89              & 64                 & \multicolumn{2}{c|}{}                   \\ \cline{1-4}
+58,57          & 77,00           & 69,12              & 64                 & \multicolumn{2}{c|}{}                   \\ \cline{1-4}
+60,06          & 79,00           & \multicolumn{2}{c|}{\multirow{21}{*}{}} & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+60,70          & 80,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+61,95          & 81,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+63,16          & 82,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+64,37          & 83,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+65,67          & 84,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+67,60          & 86,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+68,75          & 87,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+69,72          & 88,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+71,45          & 90,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+72,92          & 92,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+74,54          & 94,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+75,78          & 96,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+76,76          & 98,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+77,83          & 99,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+76,90          & 98,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+77,58          & 99,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+76,48          & 98,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+75,74          & 97,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+75,31          & 96,00           & \multicolumn{2}{c|}{}                   & \multicolumn{2}{c|}{}                   \\ \cline{1-2}
+77,72          & 100,00          & \multicolumn{2}{c|}{}
+& \multicolumn{2}{c|}{}                   \\ \hline
+
+\caption{Зависимость коллекторного тока $I_\text{к}$ от анодного
+    напряжения $V_\text{a}$ для различных значений задерживающего
+напряжения
+}
+\end{longtable}
 
 
 
